--- a/nodeapp/Jenkinsfile
+++ b/nodeapp/Jenkinsfile
@@ -7,7 +7,9 @@ pipeline {
 
     stages {
         stage('Github') {
-            git branch: 'main', credentialsId: 'github', url: 'https://github.com/kimhan9/jenkins-container.git'
+            steps {
+                git branch: 'main', credentialsId: 'github', url: 'https://github.com/kimhan9/jenkins-container.git'
+            }
         }
         stage('Unit Test'){
 			steps {
