--- a/nodeapp/Jenkinsfile
+++ b/nodeapp/Jenkinsfile
@@ -5,12 +5,18 @@ pipeline {
         nodejs 'node18'
     }
 
+    environment {
+        SONAR_SCANNER_HOME = tool 'sonar-scanner'
+        SONAR_PROJECT_KEY = 'nodeapp'
+    }
+
     stages {
         stage('Github') {
             steps {
                 git branch: 'main', credentialsId: 'github', url: 'https://github.com/kimhan9/jenkins-container.git'
             }
         }
+
         stage('Unit Test'){
 			steps {
                 dir('nodeapp') {
@@ -19,5 +25,22 @@ pipeline {
                 }
 			}
 		}
+
+		stage('SonarQube Analysis'){
+			steps {
+                withCredentials([string(credentialsId: 'sonar-token', variable: 'SONAR_TOKEN')]) {
+                    withSonarQubeEnv('sonar-server') {
+    					sh """
+						${SONAR_SCANNER_HOME}/bin/sonar-scanner \
+						-Dsonar.projectKey=${SONAR_PROJECT_KEY} \
+						-Dsonar.sources=. \
+						-Dsonar.host.url=http://my-sonarqube:9000 \
+						-Dsonar.login=${SONAR_TOKEN}
+						"""
+                    }
+                }
+			}
+		}
+
     }
 }
