--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,7 @@
 services:
+
   jenkins:
+    build: .
     image: my-jenkins
     ports:
       - 8080:8080
@@ -8,4 +10,18 @@ services:
       - /var/jenkins_home:/var/jenkins_home
       - /var/run/docker.sock:/var/run/docker.sock
     container_name: my-jenkins
-    network_mode: bridge
+    networks:
+      - dind-network
+  
+  sonarqube:
+    image: sonarqube:latest
+    ports:
+      - 9000:9000
+    container_name: my-sonarqube
+    environment:
+      SONAR_ES_BOOTSTRAP_CHECKS_DISABLE: true
+    networks:
+      - dind-network
+  
+networks:
+  dind-network: {}
