--- a/nodeapp/Jenkinsfile
+++ b/nodeapp/Jenkinsfile
@@ -59,11 +59,13 @@ pipeline {
 
         stage('Push Docker Image') {
             steps {
-                docker.withRegistry('https://registry.hub.docker.com', 'dockerhub') {
+                script {
+                    docker.withRegistry('https://registry.hub.docker.com', 'dockerhub') {
                         docker.push()
                     }
+                }
             }
         }
-
+        
     }
 }
