--- a/nodeapp/Jenkinsfile
+++ b/nodeapp/Jenkinsfile
@@ -46,22 +46,23 @@ pipeline {
         stage('Build Docker Image') {
             steps {
                 script {
-                    docker.build("${DOCKER_HUB_REPO}:${env.BUILD_NUMBER}")
+                    docker.build(${DOCKER_HUB_REPO})
                 }
             }
         }
 
         stage('Trivy Scan'){
 			steps {
-				sh 'trivy --severity HIGH,CRITICAL --no-progress --format table -o trivy-report.html image ${JOB_NAME_NOW}:latest'
+				sh 'trivy image ${DOCKER_HUB_REPO}'
 			}
 		}
 
         stage('Push Docker Image') {
-            steps {
+            steps { 
                 script {
                     docker.withRegistry('https://registry.hub.docker.com', 'dockerhub') {
-                        docker.push()
+                        docker.push($env.BUILD_NUMBER)
+                        docker.push("latest")
                     }
                 }
             }
